--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <h1>Scribble to Text 1</h1>
+    <h1>One Scribble</h1>
     <canvas id="scribbleCanvas" width="400" height="300"></canvas>
     <button id="convertButton">Convert Scribble to Text</button>
     <div id="result"></div>
